--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,6 +19,7 @@
     </section>
     <footer class="main" id="f1">
       <a href="http://es.wikipedia.org/wiki/Quiz">¿Qué es un Quiz?</a>
+      <a href="https://github.com/lcballesteros/quiz">Página del proyecto en GitHub</a>
     </footer>
    </div>
   </body>
