--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8"><title>Preguntas</title> 
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css"/>
+    <link rel='stylesheet' type='text/css' media='only screen and (min-width: 530px) and (min-device-width: 481px)'
+        href='/stylesheets/wide.css' />
+    <link rel='stylesheet' type='text/css' media='only screen and (max-width: 480px)' 
+        href='/stylesheets/smartphone.css' />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
@@ -12,7 +16,7 @@
     </header>
     <nav class="main" id="n1" role="navigation">
       <span><a href="/">Inicio</a></span>
-      <span><a href="/quizes/question">Preguntas</a></span>
+      <span><a href="/quizes">Preguntas</a></span>
       <span><a href="/author">Autor</a></span>
     </nav>
     <section class="main" id="s1">
