--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,4 +1,4 @@
 
     <p><%= respuesta %></p>
-    <p><a href="/quizes/question">Intente otra vez</a></p>
+    <p><a href="/quizes/<%= quiz.id %>">Volver</a></p>
   
