--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -13,4 +13,11 @@
     </tr> 
   <% } %>
 </table>
+
+<br>
+<form method="get" action="/quizes">
+  <input type="text"  name="search" value="" />
+  <input type="submit" value="Buscar" />
+</form>
+
 <a href="/quizes/new"><button>Crear pregunta</button></a>
